--- a/index.html
+++ b/index.html
@@ -337,76 +337,80 @@
         }
 
 
-        function generateExcel(formData, books) {
-            const documentText = DONAZIONE ALLA BIBLIOTECA ELSA MORANTE
+function generateExcel(formData, books) {
+    const wb = XLSX.utils.book_new();
+    
+    // Preparazione dei dati per il documento
+    const documentData = [
+        [{ v: 'Donazione alla Biblioteca Elsa Morante', s: { font: { bold: true } } }],
+        [],
+        [{ v: 'Dati del Donatore', s: { font: { bold: true } } }],
+        [{ v: 'Nome', s: { font: { bold: true } } }, formData.nome],
+        [{ v: 'Cognome', s: { font: { bold: true } } }, formData.cognome],
+        [{ v: 'Numero Tessera', s: { font: { bold: true } } }, formData.tessera || 'Non specificato'],
+        [{ v: 'Telefono', s: { font: { bold: true } } }, formData.telefono || 'Non specificato'],
+        [{ v: 'Email', s: { font: { bold: true } } }, formData.email],
+        [],
+        [{ v: 'Dichiarazione', s: { font: { bold: true } } }],
+        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
+        [],
+        ['Data Donazione', new Date().toLocaleDateString('it-IT')],
+        [],
+        [{ v: 'Elenco Libri Donati', s: { font: { bold: true } } }],
+        [
+            { v: 'Titolo', s: { font: { bold: true } } }, 
+            { v: 'Autore', s: { font: { bold: true } } }, 
+            { v: 'Editore', s: { font: { bold: true } } }, 
+            { v: 'Anno', s: { font: { bold: true } } }, 
+            { v: 'ISBN', s: { font: { bold: true } } }
+        ]
+    ];
 
+    // Aggiunta dei libri alla lista
+    books.forEach(book => {
+        documentData.push([
+            book.title || 'Non specificato', 
+            book.author || 'Non specificato', 
+            book.publisher || 'Non specificato', 
+            book.year || 'Non specificato', 
+            book.isbn || 'Non specificato'
+        ]);
+    });
 
-Io sottoscritto ${formData.nome} ${formData.cognome}
-Tessera n. ${formData.tessera || '_______________'} 
-Tel. ${formData.telefono || '_______________'} 
-e-mail ${formData.email}
+    // Creazione del foglio
+    const sheet = XLSX.utils.aoa_to_sheet(documentData);
 
+    // Impostazione larghezza colonne
+    sheet['!cols'] = [
+        { wch: 40 },  // Prima colonna
+        { wch: 30 },  // Seconda colonna (per i libri, larghezza per più colonne)
+        { wch: 30 },
+        { wch: 30 },
+        { wch: 15 },
+        { wch: 20 }
+    ];
 
-dono alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all'uso che riterrà più opportuno (acquisizione al patrimonio, scambio, dono, bookcrossing o scarto, nel caso in cui, a giudizio insindacabile della biblioteca, i materiali risultino inutilizzabili) senza alcun vincolo per la biblioteca stessa nei miei confronti
+    // Aggiunta del foglio al workbook
+    XLSX.utils.book_append_sheet(wb, sheet, "Donazione Libri");
 
+    // Generazione e download del file
+    const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
 
-Data: ${new Date().toLocaleDateString('it-IT')}
-;
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
 
-
-            const wb = XLSX.utils.book_new();
-            
-            const ws_data = [
-                [''],
-                [documentText.split('\n')[0]],
-                [''],
-                ...documentText.split('\n').slice(1).map(line => [line]),
-                [''],
-                ['Elenco dei libri donati:'],
-                [''],
-                ['Titolo', 'Autore', 'Editore', 'Anno', 'ISBN']
-            ];
-
-
-            books.forEach(book => {
-                ws_data.push([book.title, book.author, book.publisher, book.year, book.isbn]);
-            });
-
-
-            const ws = XLSX.utils.aoa_to_sheet(ws_data);
-
-
-            ws['!cols'] = [
-                { wch: 30 },
-                { wch: 20 },
-                { wch: 20 },
-                { wch: 10 },
-                { wch: 15 }
-            ];
-
-
-            XLSX.utils.book_append_sheet(wb, ws, "Donazione");
-
-
-            const wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
-
-
-            function s2ab(s) {
-                const buf = new ArrayBuffer(s.length);
-                const view = new Uint8Array(buf);
-                for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
-                return buf;
-            }
-
-
-            const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
-            const url = window.URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = donazione_${formData.cognome}_${formData.nome}.xlsx;
-            a.click();
-            window.URL.revokeObjectURL(url);
-        }
+    const blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
+    const url = window.URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = donazione_${formData.cognome}_${formData.nome}.xlsx;
+    a.click();
+    window.URL.revokeObjectURL(url);
+}
 
 
         // Create the first book entry when the page loads
