--- a/index.html
+++ b/index.html
@@ -352,11 +352,8 @@
         ['Email', formData.email],
         [],
         ['Dichiarazione'],
-        [
-        'Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno',
-        '(acquisizione al patrimonio, scambio, dono, bookcrossing o scarto, nel caso in cui, a giudizio insindacabile della biblioteca, i materiali risultino inutilizzabili)',
-        'senza alcun vincolo per la biblioteca stessa nei miei confronti.'
-    ],
+        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
+
         [],
         ['Data Donazione', new Date().toLocaleDateString('it-IT')]
     ];
