--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         ['Email', formData.email],
         [],
         ['Dichiarazione'],
-        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno.'],
+        ['Io sottoscritto dichiaro di donare alla Biblioteca le risorse documentarie allegate e autorizzo la biblioteca a destinarli all\'uso che riterrà più opportuno, senza alcun vincolo per la biblioteca stessa.'],
 
         [],
         ['Data Donazione', new Date().toLocaleDateString('it-IT')]
