--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h1>Donazione alla Biblioteca Elsa Morante</h1>
         
         <div class="info-box">
-            Compila il modulo per donare i tuoi libri alla biblioteca. Tutti i campi contrassegnati con * sono obbligatori.
+            Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con * sono obbligatori.
         </div>
 
         <form id="donationForm">
