--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <body>
     <div class="container">
         <div class="header-container">
-            <img src="logo.png" alt="Logo Biblioteca">
+             <!-- <img src="logo.png" alt="Logo Biblioteca"> -->
             <h1>Donazione alla Biblioteca Elsa Morante</h1>
         </div>
         
