--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ input[type="checkbox"] {
 <body>
    <div class="container">
         <div class="header-container">
-            <img src="logo.png" alt="Logo Biblioteca">
+            <img src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" alt="Logo Biblioteca">
             <h1>Donazione alla Biblioteca Elsa Morante</h1>
         </div>
         
