--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ createBookEntry();
 
             } catch (error) {
     console.error('Errore durante la generazione del file Excel:', error); // Log dell'errore
-    alert('Si è verificato un errore durante la generazione del documento. Riprova più tardi.');
+    alert('Invia il documento scaricato a l.daniello@bibliotechediroma.it.');
     
     // Ripristina il bottone in caso di errore
     const submitButton = event.target.querySelector('button[type="submit"]');
