--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ function showEmailPopup() {
     popup.innerHTML = `
         <div class="bg-white p-6 rounded-lg shadow-lg w-96 text-center">
             <h2 class="text-xl font-semibold mb-4">Documento generato con successo!</h2>
-            <p class="mb-4">Il documento è stato scaricato correttamente. Invialo a: l.daniello@biblioteche</p>
+            <p class="mb-4">Il documento è stato scaricato correttamente. Invialo a: l.daniello@bibliotechediroma.it</p>
             <button id="sendEmailBtn" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Invia a email</button>
             <button id="closePopupBtn" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400 mt-3">Chiudi</button>
         </div>
