--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="bg-gray-50 p-4 rounded mb-5">
                 <label class="flex items-start gap-3">
                     <input type="checkbox" id="accept" name="accept" required class="w-5 h-5 mt-1">
-                    <span>Ho letto e accetto <a href="termini.pdf" target="_blank" class="text-blue-500 hover:underline">termini e condizioni</a></span>
+                    <span>Ho letto e accetto <a href="termini.html" target="_blank" class="text-blue-500 hover:underline">termini e condizioni</a></span>
                 </label>
             </div>
             
