--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
+    <!-- Intestazione con logo e colore rosso -->
     <header class="bg-[#970a2c] text-white py-4">
         <div class="container mx-auto flex items-center justify-center">
             <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-10 mr-4">
