--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
-    <!-- Intestazione con logo e colore rosso -->
     <header class="bg-[#970a2c] text-white py-4">
-        <div class="container mx-auto flex items-center justify-center">
-            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-10 mr-4">
+        <div class="container mx-auto text-center flex items-center justify-center gap-4">
+            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-8">
             <h1 class="text-2xl font-bold">Termini e Condizioni per la Donazione di Libri</h1>
         </div>
     </header>
@@ -19,7 +18,7 @@
         <section>
             <h2 class="text-xl font-semibold mb-4">Termini e Condizioni</h2>
             <p class="mb-4">
-                L’acquisizione della donazione è subordinata:
+                L'acquisizione della donazione è subordinata:
             </p>
             <ul class="list-disc ml-8 mb-4">
                 <li>ai criteri che informano la gestione delle raccolte e lo sviluppo omogeneo e coerente delle collezioni;</li>
@@ -34,7 +33,7 @@
                 <li>opere enciclopediche;</li>
                 <li>dizionari editi da più di quattro anni;</li>
                 <li>testi di carattere propagandistico o dottrinale, per qualsivoglia pensiero o credo, religioso o laico;</li>
-                <li>libri d’uso strettamente scolastico;</li>
+                <li>libri d'uso strettamente scolastico;</li>
                 <li>riviste e periodici;</li>
                 <li>guide turistiche edite da più di 4 anni;</li>
                 <li>saggi in lingua originale (si accetta solo narrativa);</li>
@@ -47,7 +46,7 @@
                 <li>riviste.</li>
             </ul>
             <p class="mb-4">
-                Per favorire la valutazione delle opere è richiesto l’invio preventivo di un elenco del materiale in formato testuale, con autore, titolo, editore, anno, ed eventualmente, codice ISBN, da indirizzare a
+                Per favorire la valutazione delle opere è richiesto l'invio preventivo di un elenco del materiale in formato testuale, con autore, titolo, editore, anno, ed eventualmente, codice ISBN, da indirizzare a
                 <a href="mailto:l.daniello@bibliotechediroma.it" class="text-blue-500 underline">l.daniello@bibliotechediroma.it</a>.
             </p>
             <p class="mb-4">
