--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
-    <header class="bg-[#970a2c] text-white py-4">
+    <header style="background-color: #970a2c;" class="text-white py-4">
         <div class="container mx-auto text-center flex items-center justify-center gap-4">
-            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-8">
+            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-8" style="height: 32px;">
             <h1 class="text-2xl font-bold">Termini e Condizioni per la Donazione di Libri</h1>
         </div>
     </header>
