--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termini e Condizioni - Donazione di Libri</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .custom-header {
+            background-color: #970a2c;
+        }
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
-    <header style="background-color: #970a2c;" class="text-white py-4">
+    <header class="custom-header text-white py-4">
         <div class="container mx-auto text-center flex items-center justify-center gap-4">
-            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="h-8" style="height: 32px;">
+            <img src="./logobianco.png" alt="Logo Biblioteche di Roma" style="height: 32px;">
             <h1 class="text-2xl font-bold">Termini e Condizioni per la Donazione di Libri</h1>
         </div>
     </header>
