--- a/termini.html
+++ b/termini.html
@@ -14,7 +14,7 @@
             background-color: #970a2c;
             color: #fff;
             padding: 16px 0;
-            height: 6cm;
+            height: 4cm;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -24,8 +24,12 @@
             align-items: center;
         }
         header img {
-            height: 40px;
+            height: 60px; /* Aumentate le dimensioni del logo */
             margin-right: 16px;
+        }
+        header h1 {
+            font-size: 2rem; /* Aumentata la dimensione del testo */
+            font-weight: bold;
         }
         main {
             max-width: 800px;
@@ -37,9 +41,6 @@
         }
         h1, h2 {
             font-weight: bold;
-        }
-        h1 {
-            font-size: 1.5rem;
         }
         h2 {
             font-size: 1.25rem;
@@ -57,13 +58,13 @@
             text-decoration: underline;
         }
         footer {
-            background-color: #2d3748;
+            background-color: #970a2c; /* Colore dello sfondo del footer */
             color: #fff;
             text-align: center;
             padding: 16px 0;
         }
         footer a {
-            color: #f3f4f6;
+            color: #fff;
             text-decoration: underline;
         }
     </style>
@@ -124,7 +125,6 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Biblioteche di Roma. Tutti i diritti riservati.</p>
         <p>Visita la <a href="https://www.bibliotechediroma.it/opac/.do" target="_blank">home page di Biblioteche di Roma</a>.</p>
     </footer>
 </body>
