--- a/termini.html
+++ b/termini.html
@@ -10,43 +10,26 @@
             color: #2d3748;
             font-family: Arial, sans-serif;
         }
-
-
-       header {
-    background-color: #970a2c;
-    color: #fff;
-    padding: 16px; /* Margine interno uniforme */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box; /* Evita l'espansione involontaria */
-}
-
-header .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 800px; /* Larghezza massima per evitare espansione */
-    width: 100%; /* Adatta l'intestazione al dispositivo */
-    box-sizing: border-box; /* Include padding nel calcolo della larghezza */
-    text-align: center; /* Centra i contenuti */
-}
-
-header img {
-    height: 50px; /* Logo di dimensioni proporzionate */
-    margin-right: 12px; /* Distanza tra logo e titolo */
-}
-
-header h1 {
-    font-size: 1.25rem; /* Riduce la dimensione del titolo */
-    font-weight: bold;
-    margin: 0; /* Elimina margini aggiuntivi */
-    line-height: 1.5; /* Migliora la leggibilità */
-}
-
-
-        
-        
+        header {
+            background-color: #970a2c;
+            color: #fff;
+            padding: 16px 0;
+            height: 4cm;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        header .container {
+            display: flex;
+            align-items: center;
+        }
+        header img {
+            height: 60px; /* Aumentate le dimensioni del logo */
+            margin-right: 16px;
+        }
+        header h1 {
+            font-size: 2rem; /* Aumentata la dimensione del testo */
+            font-weight: bold;
         }
         main {
             max-width: 800px;
