--- a/termini.html
+++ b/termini.html
@@ -192,7 +192,9 @@
         </div>
         <div class="container">
             <img src="logobianco.png" alt="Logo Biblioteche di Roma">
-            <h1>Donazione Libri - Biblioteca Morante</h1>
+            
+            <h1>Donazione Libri alla Biblioteca Morante<br>Termini e Condizioni</h1>
+
         </div>
     </header>
 
