--- a/termini.html
+++ b/termini.html
@@ -84,11 +84,11 @@
         }
         
         .intro {
-            text-align: center;
-            font-size: 1.8rem;
+            font-size: 2rem;
             font-weight: bold;
-            margin-bottom: 2rem;
             color: var(--primary);
+            text-align: left;
+            margin-bottom: 2rem;
         }
         
         h2 {
