--- a/termini.html
+++ b/termini.html
@@ -240,7 +240,7 @@
     </header>
 
     <main>
-        <p class="intro">Donazione Libri alla Biblioteca Morante – Termini e Condizioni</p>
+        <p class="intro">Donazione Libri alla Biblioteca Morante</p>
         
         <section>
             <h2>Criteri di Accettazione</h2>
