--- a/termini.html
+++ b/termini.html
@@ -274,7 +274,7 @@
 
             <h2>Procedura di Donazione</h2>
             <div class="contact-info">
-                <p>Per valutare le opere, vi preghiamo di compilare l'apposito  modulo, scaricare il documento autogenerato e invialo all'indirizzo: a:</p>
+                <p>Per valutare i titoli, vi preghiamo di compilare l'apposito  modulo, scaricare il documento autogenerato e inviarlo all'indirizzo: a:</p>
                 <a href="mailto:l.daniello@bibliotechediroma.it">
                     <i class="fas fa-envelope"></i> l.daniello@bibliotechediroma.it
                 </a>
